samples/_failures_safe/1761287939_17450c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fae58ef5.c: In function ‘main’:
./samples/SAFE/__tmp_fae58ef5.c:146:5: error: expected declaration or statement at end of input
  146 |     }
      |     ^
